# CalQuityTask

./: DELIVERABLES_ASSESSMENT.md  FINAL_STATUS.md  README.md  run.py  setup.py
config/: pyproject.toml  requirements.txt
docs/: API.md  INSTALLATION.md  README.md
scripts/: performance_analysis.py
src/calquity/: __init__.py  config_manager.py  document_processor.py  search_engine.py
tests/: test_system.py
web/: app.py
